--- a/application/templates/deployment.yaml
+++ b/application/templates/deployment.yaml
@@ -75,12 +75,12 @@ spec:
 {{- end }}
     spec:
       {{- if .Values.deployment.hostAliases }}
-      hostAliases:      
+      hostAliases:
 {{ toYaml .Values.deployment.hostAliases | indent 6 }}
       {{- end }}
       {{- if .Values.deployment.initContainers }}
       initContainers:
-  {{- range $key, $value := .Values.deployment.initContainers  }}
+  {{- range $key, $value := .Values.deployment.initContainers }}
       - name: {{ $key }}
 {{ include "application.tplvalues.render" ( dict "value" $value "context" $ ) | indent 8 }}
       {{- end }}
@@ -88,6 +88,10 @@ spec:
       {{- if .Values.deployment.nodeSelector }}
       nodeSelector:
 {{ toYaml .Values.deployment.nodeSelector | indent 8 }}
+      {{- end }}
+      {{- if .Values.deployment.priorityClassName }}
+      priorityClassName:
+{{ toYaml .Values.deployment.priorityClassName | indent 8 }}
       {{- end }}
       {{- if .Values.deployment.tolerations }}
       tolerations:
@@ -101,7 +105,7 @@ spec:
       topologySpreadConstraints:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- if .Values.deployment.imagePullSecrets }}      
+      {{- if .Values.deployment.imagePullSecrets }}
       imagePullSecrets:
       - name: {{ .Values.deployment.imagePullSecrets }}
       {{- end }}
@@ -119,7 +123,7 @@ spec:
         - --tls-cert=/etc/tls/private/tls.crt
         - --tls-key=/etc/tls/private/tls.key
         - --cookie-secret=SECRET
-        image: {{ .Values.deployment.openshiftOAuthProxy.image  | default "openshift/oauth-proxy:latest" }}
+        image: {{ .Values.deployment.openshiftOAuthProxy.image | default "openshift/oauth-proxy:latest" }}
         imagePullPolicy: IfNotPresent
         name: oauth-proxy
         ports:
@@ -131,7 +135,7 @@ spec:
           name: proxy
         volumeMounts:
         - mountPath: /etc/tls/private
-          name: proxy-tls 
+          name: proxy-tls
         {{- end }}
       - name: {{ template "application.name" . }}
 
@@ -237,7 +241,7 @@ spec:
             {{- toYaml .Values.deployment.readinessProbe.tcpSocket | nindent 12 }}
           {{- end }}
         {{- end }}
-      {{- if or (.Values.deployment.volumeMounts) (and (eq .Values.persistence.enabled true) (eq .Values.persistence.mountPVC true) )}} 
+      {{- if or (.Values.deployment.volumeMounts) (and (eq .Values.persistence.enabled true) (eq .Values.persistence.mountPVC true) )}}
         volumeMounts:
         {{- if (eq .Values.persistence.mountPVC true) }}
         - mountPath: {{ .Values.persistence.mountPath }}
@@ -246,7 +250,7 @@ spec:
         {{- if .Values.deployment.volumeMounts }}
         {{- range $key, $value := .Values.deployment.volumeMounts }}
         - name: {{ $key }}
-{{  include "application.tplvalues.render" ( dict "value" $value "context" $ ) | indent 10 }} 	
+{{  include "application.tplvalues.render" ( dict "value" $value "context" $ ) | indent 10 }}
         {{- end }}
         {{- end }}
       {{- end }}
@@ -262,14 +266,14 @@ spec:
 {{ toYaml .Values.deployment.additionalContainers | indent 6 }}
         {{- end }}
         {{- if .Values.deployment.securityContext }}
-      securityContext:      
+      securityContext:
 {{ toYaml .Values.deployment.securityContext | indent 8 }}
           {{- end }}
       {{- if .Values.deployment.dnsConfig }}
-      dnsConfig:      
+      dnsConfig:
 {{ toYaml .Values.deployment.dnsConfig | indent 8 }}
           {{- end }}
-      {{- if or (.Values.deployment.openshiftOAuthProxy.enabled) (.Values.deployment.volumes) (and (eq .Values.persistence.enabled true) (eq .Values.persistence.mountPVC true) )}} 
+      {{- if or (.Values.deployment.openshiftOAuthProxy.enabled) (.Values.deployment.volumes) (and (eq .Values.persistence.enabled true) (eq .Values.persistence.mountPVC true) )}}
       volumes:
         {{- if .Values.deployment.openshiftOAuthProxy.enabled }}
       - name: proxy-tls
@@ -286,8 +290,8 @@ spec:
           {{- end }}
         {{- end }}
         {{- if .Values.deployment.volumes }}
-        {{- range $key, $value := .Values.deployment.volumes  }}
-      - name: {{ $key  }}
+        {{- range $key, $value := .Values.deployment.volumes }}
+      - name: {{ $key }}
 {{ include "application.tplvalues.render" ( dict "value" $value "context" $ ) | indent 8 }}
         {{- end }}
         {{- end }}
@@ -303,4 +307,12 @@ spec:
       hostNetwork: {{ .Values.deployment.hostNetwork }}
       {{- end }}
       terminationGracePeriodSeconds: {{ .Values.deployment.terminationGracePeriodSeconds }}
+      {{- if .Values.lifecycle }}
+      lifecycle:
+        {{- if .Values.lifecycle.preStop }}
+        preStop:
+          exec:
+            command: {{ .Values.lifecycle.preStop.exec.command }}
+        {{- end }}
+      {{- end }}
 {{- end }}
