--- a/application/templates/cronjob.yaml
+++ b/application/templates/cronjob.yaml
@@ -64,65 +64,68 @@ spec:
             image: {{ $image }}
             {{- if $job.image.imagePullPolicy }}
             imagePullPolicy: {{ $job.image.imagePullPolicy }}
-            {{ end }}
+            {{- end }}
             {{- with $job.env }}
             env:
             {{- range $key, $value := $job.env }}
             - name: {{ include "application.tplvalues.render" ( dict "value" $key "context" $ ) }}
-{{ include "application.tplvalues.render" ( dict "value" $value "context" $ ) | indent 14 }}
+              {{- include "application.tplvalues.render" ( dict "value" $value "context" $ ) | indent 14 }}
             {{- end }}
             {{- end }}
             {{- with $job.envFrom }}
             envFrom:
-{{ toYaml . | indent 12 }}
+              {{- toYaml . | indent 14 }}
             {{- end }}
             {{- if $job.command }}
             command: {{ $job.command }}
             {{- end }}
             {{- with $job.args }}
             args:
-{{ toYaml . | indent 12 }}
+              {{- toYaml . | indent 14 }}
               {{- end }}
             {{- with $job.resources }}
             resources:
-{{ toYaml . | indent 14 }}
+              {{- toYaml . | indent 14 }}
             {{- end }}
             {{- with $job.volumeMounts }}
             volumeMounts:
-{{ toYaml . | indent 12 }}
+              {{- toYaml . | indent 14 }}
             {{- end }}
           {{- with $job.nodeSelector }}
           nodeSelector:
-{{ toYaml . | indent 12 }}
+            {{- toYaml . | indent 12 }}
           {{- end }}
           {{- with $job.affinity }}
           affinity:
-{{ toYaml . | indent 12 }}
+            {{- toYaml . | indent 12 }}
           {{- end }}
           {{- with $job.priorityClassName }}
-          priorityClassName: {{ toYaml . | nindent 12 }}
+          priorityClassName: {{ . }}
           {{- end }}
           {{- with $job.tolerations }}
-          tolerations: {{ toYaml . | nindent 12 }}
+          tolerations:
+            {{- toYaml . | nindent 12 }}
           {{- end }}
           {{- with $job.topologySpreadConstraints }}
-          topologySpreadConstraints: {{ toYaml . | nindent 12 }}
+          topologySpreadConstraints:
+            {{- toYaml . | nindent 12 }}
           {{- end }}
           {{- with $job.securityContext }}
-          securityContext: {{ toYaml . | nindent 12 }}
+          securityContext:
+            {{- toYaml . | nindent 12 }}
           {{- end }}
           {{- if $job.restartPolicy}}
           restartPolicy: {{ $job.restartPolicy }}
-          {{ else }}
+          {{- else }}
           restartPolicy: OnFailure
-          {{ end }}
+          {{- end }}
           {{- with $job.imagePullSecrets}}
           imagePullSecrets:
-{{ toYaml . | indent 12 }}
-          {{ end }}
+            {{- toYaml . | indent 12 }}
+          {{- end }}
           {{- with $job.volumes }}
           volumes:
-{{ toYaml . | indent 12 }}
+            {{- toYaml . | indent 12 }}
           {{- end }}
 {{- end }}
 {{- end }}
