--- a/application/templates/job.yaml
+++ b/application/templates/job.yaml
@@ -23,6 +23,15 @@ spec:
   {{- with $job.activeDeadlineSeconds }}
   activeDeadlineSeconds: {{ . }}
   {{- end }}
+  {{- with $job.parallelism }}
+  parallelism: {{ . }}
+  {{- end }}
+  {{- with $job.completions }}
+  completions: {{ . }}
+  {{- end }}
+  {{- with $job.ttlSecondsAfterFinished }}
+  ttlSecondsAfterFinished: {{ . }}
+  {{- end }}
   {{- if not (kindIs "invalid" $job.backoffLimit) }}
   backoffLimit: {{ $job.backoffLimit }}
   {{- end }}
@@ -44,6 +53,49 @@ spec:
       serviceAccountName: {{ template "application.name" $ }}
       {{- end }}
       {{- end }}
+      initContainers:
+      {{- range . }}
+      - name: {{ $name }}
+
+        {{- $image := required (print "Undefined image repo for container '" $name "'") $job.image.repository }}
+        {{- with $job.image.tag    }} {{- $image = print $image ":" . }} {{- end }}
+        {{- with $job.image.digest }} {{- $image = print $image "@" . }} {{- end }}
+        image: {{ $image }}
+
+        {{- if $job.image.imagePullPolicy }}
+        imagePullPolicy: {{ $job.image.imagePullPolicy }}
+        {{ end }}
+        {{- with $job.env }}
+        env:
+        {{- range $key, $value := $job.env }}
+        - name: {{ include "application.tplvalues.render" ( dict "value" $key "context" $ ) }}
+{{ include "application.tplvalues.render" ( dict "value" $value "context" $ ) | indent 10 }}
+        {{- end }}
+        {{- end }}
+        {{- with $job.lifecycle }}
+        lifecycle:
+{{ toYaml . | indent 8 }}
+        {{- end }}
+        {{- with $job.envFrom }}
+        envFrom:
+{{ toYaml . | indent 8 }}
+        {{- end }}
+        {{- if $job.command }}
+        command: {{ $job.command }}
+        {{- end }}
+        {{- with $job.args }}
+        args:
+{{ toYaml . | indent 8 }}
+          {{- end }}
+        {{- with $job.resources }}
+        resources:
+{{ toYaml . | indent 10 }}
+        {{- end }}
+        {{- with $job.volumeMounts }}
+        volumeMounts:
+{{ toYaml . | indent 8 }}
+        {{- end }}
+      {{- end }}
       containers:
       - name: {{ $name }}
 
@@ -61,6 +113,10 @@ spec:
         - name: {{ include "application.tplvalues.render" ( dict "value" $key "context" $ ) }}
 {{ include "application.tplvalues.render" ( dict "value" $value "context" $ ) | indent 10 }}
         {{- end }}
+        {{- end }}
+        {{- with $job.lifecycle }}
+        lifecycle:
+{{ toYaml . | indent 8 }}
         {{- end }}
         {{- with $job.envFrom }}
         envFrom:
@@ -83,6 +139,10 @@ spec:
         {{- end }}
       {{- with $job.nodeSelector }}
       nodeSelector:
+{{ toYaml . | indent 8 }}
+      {{- end }}
+      {{- with $job.priorityClassName }}
+      priorityClassName:
 {{ toYaml . | indent 8 }}
       {{- end }}
       {{- with $job.affinity }}
