--- a/application/Chart.yaml
+++ b/application/Chart.yaml
@@ -6,7 +6,7 @@ type: application
 
 # Helm chart Version
 
-version: 5.1.0
+version: 5.1.50
 
 
 keywords:
@@ -17,9 +17,9 @@ keywords:
   - stakater
   - application
 
-home: https://github.com/stakater/application
+home: https://github.com/saritasa-nest/stakater-application
 maintainers:
 - name: Stakater
-  email: hello@stakater.com
+  email: maxim.omelchenko@saritasa.com
 
 icon: https://github.com/stakater/ForecastleIcons/blob/master/stakater.png
